--- a/text-data-preparation.ipynb
+++ b/text-data-preparation.ipynb
@@ -502,17 +502,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mixed dataset: 142 158 156 144\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Making sure the training, validation and test datasets are also balanced.\n",
     "\n",
@@ -522,39 +514,22 @@
     "male_sarcastic_utterances = [(key, value) for key, value in mixed_combined_data.items() if value['gender'] == 'M' and value['sarcasm']]\n",
     "male_non_sarcastic_utterances = [(key, value) for key, value in mixed_combined_data.items() if value['gender'] == 'M' and not value['sarcasm']]\n",
     "\n",
-    "train_size = int(0.7 * len(female_sarcastic_utterances))\n",
-    "val_size = int(0.15 * len(female_sarcastic_utterances))\n",
-    "test_size = len(female_sarcastic_utterances) - train_size - val_size\n",
-    "\n",
+    "# Splitting the data into 70% training, 15% validation and 15% test\n",
     "FS_train, FS_test_val = train_test_split(female_sarcastic_utterances, test_size = 0.3)\n",
     "FS_test, FS_val = train_test_split(FS_test_val, test_size = 0.5)\n",
-    "\n",
-    "train_size = int(0.7 * len(female_non_sarcastic_utterances))\n",
-    "val_size = int(0.15 * len(female_non_sarcastic_utterances))\n",
-    "test_size = len(female_non_sarcastic_utterances) - train_size - val_size\n",
     "\n",
     "FnS_train, FnS_test_val = train_test_split(female_non_sarcastic_utterances, test_size = 0.3)\n",
     "FnS_test, FnS_val = train_test_split(FnS_test_val, test_size = 0.5)\n",
     "\n",
-    "train_size = int(0.7 * len(male_sarcastic_utterances))\n",
-    "val_size = int(0.15 * len(male_sarcastic_utterances))\n",
-    "test_size = len(male_sarcastic_utterances) - train_size - val_size\n",
-    "\n",
     "MS_train, MS_test_val = train_test_split(male_sarcastic_utterances, test_size = 0.3)\n",
     "MS_test, MS_val = train_test_split(MS_test_val, test_size = 0.5)\n",
-    "\n",
-    "train_size = int(0.7 * len(male_non_sarcastic_utterances))\n",
-    "val_size = int(0.15 * len(male_non_sarcastic_utterances))\n",
-    "test_size = len(male_non_sarcastic_utterances) - train_size - val_size\n",
     "\n",
     "MnS_train, MnS_test_val = train_test_split(male_non_sarcastic_utterances, test_size = 0.3)\n",
     "MnS_test, MnS_val = train_test_split(MnS_test_val, test_size = 0.5)\n",
     "\n",
     "train_set_mixed = dict(FS_train + FnS_train + MS_train + MnS_train)\n",
     "val_set_mixed = dict(FS_val + FnS_val + MS_val + MnS_val)\n",
-    "test_set_mixed =  dict(FS_test + FnS_test + MS_test + MnS_test)\n",
-    "\n",
-    "print(\"Mixed dataset:\", len(FS_train), len(FnS_train), len(MS_train), len(MnS_train))"
+    "test_set_mixed =  dict(FS_test + FnS_test + MS_test + MnS_test)"
    ]
   },
   {
@@ -567,16 +542,9 @@
     "M_sarcastic_utterances = [(key, value) for key, value in M_combined_data.items() if value['gender'] == 'M' and value['sarcasm']]\n",
     "M_non_sarcastic_utterances = [(key, value) for key, value in M_combined_data.items() if value['gender'] == 'M' and not value['sarcasm']]\n",
     "\n",
-    "train_size = int(0.8 * len(M_sarcastic_utterances))\n",
-    "val_size = int(0.1 * len(M_sarcastic_utterances))\n",
-    "test_size = len(M_sarcastic_utterances) - train_size - val_size\n",
-    "\n",
+    "# Splitting the data into 80% training, 10% validation and 10% test\n",
     "MS_train, MS_test_val = train_test_split(M_sarcastic_utterances, test_size = 0.2)\n",
     "MS_test, MS_val = train_test_split(MS_test_val, test_size = 0.5)\n",
-    "\n",
-    "train_size = int(0.8 * len(M_non_sarcastic_utterances))\n",
-    "val_size = int(0.1 * len(M_non_sarcastic_utterances))\n",
-    "test_size = len(M_non_sarcastic_utterances) - train_size - val_size\n",
     "\n",
     "MnS_train, MnS_test_val = train_test_split(M_non_sarcastic_utterances, test_size = 0.2)\n",
     "MnS_test, MnS_val = train_test_split(MnS_test_val, test_size = 0.5)\n",
@@ -596,16 +564,9 @@
     "F_sarcastic_utterances = [(key, value) for key, value in F_data.items() if value['gender'] == 'F' and value['sarcasm']]\n",
     "F_non_sarcastic_utterances = [(key, value) for key, value in F_data.items() if value['gender'] == 'F' and not value['sarcasm']]\n",
     "\n",
-    "train_size = int(0.8 * len(F_sarcastic_utterances))\n",
-    "val_size = int(0.1 * len(F_sarcastic_utterances))\n",
-    "test_size = len(F_sarcastic_utterances) - train_size - val_size\n",
-    "\n",
+    "# Splitting the data into 80% training, 10% validation and 10% test\n",
     "FS_train, FS_test_val = train_test_split(F_sarcastic_utterances, test_size = 0.2)\n",
     "FS_test, FS_val = train_test_split(FS_test_val, test_size = 0.5)\n",
-    "\n",
-    "train_size = int(0.8 * len(F_non_sarcastic_utterances))\n",
-    "val_size = int(0.1 * len(F_non_sarcastic_utterances))\n",
-    "test_size = len(F_non_sarcastic_utterances) - train_size - val_size\n",
     "\n",
     "FnS_train, FnS_test_val = train_test_split(F_non_sarcastic_utterances, test_size = 0.2)\n",
     "FnS_test, FnS_val = train_test_split(FnS_test_val, test_size = 0.5)\n",
@@ -813,13 +774,6 @@
     "if n_male_utterances == n_female_utterances:\n",
     "    print('The mixed training dataset is balanced by gender')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
