--- a/audio_embeddings_training.ipynb
+++ b/audio_embeddings_training.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Authors**: Céline Hirsch, Sandra Frey, Sina Röllin\n",
+    "\n",
+    "**Deep Learning Project**: Inclusiveness in Sarcasm Detection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Hyperparameter Tuning Audio Data Embeddings"
    ]
   },
